--- a/styles/WeddingEvent.module.css
+++ b/styles/WeddingEvent.module.css
@@ -9,3 +9,19 @@
 .title {
     @apply text-4xl text-gray-600 font-bold;
 }
+
+.ios-wrapper {
+    @apply mt-[80vh];
+}
+
+@media screen and (min-height: 700px) and (max-height: 844px) {
+    .ios-wrapper {
+        @apply mt-[90vh];
+    }
+}
+
+@media screen and (max-width: 390px) and (min-width: 844px) {
+    .ios-wrapper {
+        @apply mt-[95vh];
+    }
+}
